fixed whitespace

--- a/baseball_style.css
+++ b/baseball_style.css
@@ -1,9 +1,9 @@
 body {
   font-family: "Times New Roman", sans-serif;
-  background-image: url("./images/zona_pitch.jpg"), url("./images/zona_hit.jpg"), url("./images/zona_pitch.jpg"), url("./images/zona_hit.jpg"), url("./images/zona_pitch.jpg"), url("./images/zona_hit.jpg");
-  background-size: 100% 16.66%;
+  background-image: url("./images/zona_pitch.jpg"), url("./images/zona_hit.jpg"), url("./images/zona_pitch.jpg"), url("./images/zona_hit.jpg");
+  background-size: 100%;
   background-repeat: no-repeat;
-  background-position: center top, center 16.66%, center 33.33%, center 50%, center 66.66%, center 83.33%;
+  background-position: center top, center 940px, center calc(940px*2), center calc(940px*3);
 }
       .container {
         max-width: 960px;
@@ -40,7 +40,7 @@ body {
       .grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(7, 1fr);
+        grid-template-rows: repeat(6, 1fr);
         grid-gap: 20px;
         margin-top: 50px;
       }
